Modification du favicon

--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@ h1{
     color: blue;
 }
 
-img{
+/*img{
     width: 300px;
     height: 400px;
-}
+}*/
 
 h3{
-    font-family: sans-serif;
+    font-family: italic;
 }
 
 p{
